@@ -75,9 +75,9 @@ public:
   typedef typename qmc::model_type model_type;
 
   template<class G, class MDL>
-  qmc_worker(const G& rg, const MDL& model, double beta,
+  qmc_worker(const G& rg, const MDL& model, double beta, double fs,
              alps::ObservableSet& m) :
-    param_(rg, model, beta), config_()
+    param_(rg, model, beta, fs), config_()
   {
     using alps::RealObservable;
     using alps::make_observable;
@@ -278,6 +278,8 @@ public:
     therm_(static_cast<unsigned int>(p["THERMALIZATION"])),
     total_(therm_ + static_cast<unsigned int>(p["SWEEPS"])),
     qmc_worker_(graph(), mdl_, 1.0 / static_cast<double>(p["T"]),
+                static_cast<double>(p.value_or_default("FORCE_SCATTER",
+                  has_sign_problem() ? 0.1 : 0.0)),
                 measurements) {}
   virtual ~worker() {}
 
